Fix footer visibility on notepad view

--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 130px);
 }
 
 .notepad-toolbar {
